--- a/varint_test/Cargo.toml
+++ b/varint_test/Cargo.toml
@@ -5,6 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+debug = 1
+codegen-units = 1
+lto = "fat"
+
+
+
 [dependencies]
 rand = "0.8.5"
 itertools = "0.12.1"
